# VIO_Runner

./: LICENSE  README.md  README_en.md  README_ja.md  colmap_build.sh  colmap_view.sh  github_push_clean.sh  install_vio.sh
colmap/: colmap_build.sh  colmap_view.sh
vio_project/: CMakeLists.txt  project_build.sh  project_clean.sh  project_update_appimage.sh
vio_project/AppDir/: AppRun.wrapped  Runner.desktop
vio_project/AppDir/usr/share/applications/: Runner.desktop
vio_project/cmake/: ulocalizationConfig.cmake.in
vio_project/src/: LocalizationLY.cc  LocalizationLY.h  MapSaver.cc  MapSaver.h  UlocalizationPlugins.cc  configuration.h  test_utils.cc
vio_project/tests/: Client.cc  Runner.cc
